aktivitere siden footer og hovede menu bliver nu inclueded

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
   margin: 0;
   padding: 0;
 }
-
+/*---------------------- FORSIDE ------------------------------------*/
 section {
   margin: 5vw;
 }
@@ -19,3 +19,12 @@ section {
   display: grid;
   grid-template-columns: auto auto;
 }
+
+/*---------------------- FORSIDE SLUT ------------------------------------*/
+/*---------------------- MENU --------------------------------------------*/
+
+#hovedmenu {
+  background-color: blue;
+}
+
+/*---------------------- MENU SLUT --------------------------------------------*/
