--- a/style.css
+++ b/style.css
@@ -24,9 +24,9 @@ section {
 /*---------------------- MENU --------------------------------------------*/
 
 .hovedmenu {
-  background-color: blue;
   display: flex;
   flex-wrap: nowrap;
+  background-color: blue;
 }
 
 .hovedmenu a {
@@ -35,5 +35,36 @@ section {
   flex-basis: 1;
   padding: 12px;
 }
+.dropd {
+  position: relative;
+  display: inline-block;
+}
+.dropdownc {
+  display: none;
+  position: absolute;
+  background-color: blue;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
 
+.dropdownc a {
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-decoration: none;
+  color: white;
+}
+
+.dropdownc a:hover {
+  background-color: #ddd;
+}
+
+.dropd:hover .dropdownc {
+  display: block;
+}
+
+.dropd:hover .dropbtn {
+  background-color: #3e8e41;
+}
 /*---------------------- MENU SLUT --------------------------------------------*/
