--- a/style.css
+++ b/style.css
@@ -29,6 +29,10 @@ section {
   background-color: blue;
 }
 
+.hovedmenu img {
+  width: 6vw;
+}
+
 .hovedmenu a {
   text-decoration: none;
   color: white;
@@ -44,7 +48,7 @@ section {
   position: absolute;
   background-color: blue;
   min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+
   z-index: 1;
 }
 
@@ -67,4 +71,12 @@ section {
 .dropd:hover .dropbtn {
   background-color: #3e8e41;
 }
+
+/* --------------------------------- sticky header -----------------------*/
+.fixed-nav {
+  position: fixed;
+  top: 0;
+  z-index: 1;
+}
+
 /*---------------------- MENU SLUT --------------------------------------------*/
