--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700");
+
 * {
   margin: 0;
   padding: 0;
@@ -26,50 +28,60 @@ section {
 .hovedmenu {
   display: flex;
   flex-wrap: nowrap;
-  background-color: blue;
+  background-color: #f9f9f9;
+  width: 100vw;
 }
 
 .hovedmenu img {
-  width: 6vw;
+  width: 10vw;
+  flex-basis: 1;
+  padding: 1.5vw;
+  padding-right: 5vw;
+  margin-left: 3vw;
 }
 
-.hovedmenu a {
+.hovedmenu .link {
   text-decoration: none;
-  color: white;
+  color: #76d2d1;
   flex-basis: 1;
-  padding: 12px;
+  padding: 2.6vw;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 500;
+  font-size: 1vw;
 }
 .dropd {
   position: relative;
   display: inline-block;
+  padding-top: 2.6vw;
 }
 .dropdownc {
   display: none;
   position: absolute;
-  background-color: blue;
-  min-width: 160px;
-
+  background-color: #f9f9f9;
   z-index: 1;
 }
 
 .dropdownc a {
-  padding: 12px 16px;
   text-decoration: none;
   display: block;
   text-decoration: none;
-  color: white;
+  color: #76d2d1;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 500;
+  font-size: 1vw;
+  padding: 1vw;
 }
 
 .dropdownc a:hover {
-  background-color: #ddd;
+  background-color: #5ba5a4;
 }
 
 .dropd:hover .dropdownc {
   display: block;
 }
 
-.dropd:hover .dropbtn {
-  background-color: #3e8e41;
+.hovedmenu .link:hover {
+  background-color: #5ba5a4;
 }
 
 /* --------------------------------- sticky header -----------------------*/
