--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 
 body {
   background-color: #f9f9f9;
+  overflow-x: hidden;
 }
 
 /*---------------------- FORSIDE ------------------------------------*/
@@ -59,6 +60,11 @@ button {
 iframe {
   margin-left: 10vw;
   margin-right: 10vw;
+}
+
+.griditem img {
+  width: 15vw;
+  padding: 3vw;
 }
 
 /*---------------------- FORSIDE SLUT ------------------------------------*/
