--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700");
-
+@import url("https://fonts.googleapis.com/css?family=Amiko:400,600,700");
 * {
   margin: 0;
   padding: 0;
@@ -8,6 +8,10 @@
 body {
   background-color: #f9f9f9;
   overflow-x: hidden;
+}
+
+p {
+  font-family: "Amiko", sans-serif;
 }
 
 /*---------------------- FORSIDE ------------------------------------*/
@@ -145,13 +149,6 @@ iframe {
 
 /*---------------------- MENU SLUT --------------------------------------------*/
 
-#gridcon3 {
-  display: grid;
-  grid-template-columns: auto auto;
-  margin-left: 10vw;
-  margin-right: 10vw;
-}
-
 /* ----------------------------- Om os ----------------------------------*/
 
 #om_os section {
@@ -162,4 +159,35 @@ iframe {
 #om_os #icon {
   margin-left: 0;
   margin-right: 0;
+}
+
+/* ------------------------------- aktiviteter ----------------------------------*/
+
+#aktiv #gridcon {
+  display: grid;
+  grid-template-columns: auto auto;
+  margin-left: 10vw;
+  margin-right: 10vw;
+  padding: 5vw;
+}
+#aktiv #gridcon1 {
+  display: grid;
+  grid-template-columns: auto auto;
+  margin-left: 10vw;
+  margin-right: 10vw;
+  padding: 5vw;
+}
+#aktiv #gridcon2 {
+  display: grid;
+  grid-template-columns: auto auto;
+  margin-left: 10vw;
+  margin-right: 10vw;
+  padding: 5vw;
+}
+#aktiv #gridcon3 {
+  display: grid;
+  grid-template-columns: auto auto;
+  margin-left: 10vw;
+  margin-right: 10vw;
+  padding: 5vw;
 }
