--- a/style.css
+++ b/style.css
@@ -265,4 +265,11 @@ iframe {
 }
 
 /* ------------------------------------ kontakt slut ----------------------------------------*/
-/* ------------------------------------ camps -----------------------------------------------*/
+/* ------------------------------------ undersider -----------------------------------------------*/
+.gridcon {
+  display: grid;
+  grid-template-columns: auto auto auto;
+  margin-left: 10vw;
+  margin-right: 10vw;
+  padding: 5vw;
+}
