--- a/style.css
+++ b/style.css
@@ -273,3 +273,10 @@ iframe {
   margin-right: 10vw;
   padding: 5vw;
 }
+
+.underimg {
+  width: 25vw;
+}
+
+/* ------------------------------------ undersider slut -----------------------------------------------*/
+/* ------------------------------------ footer -----------------------------------------------*/
