foootergit add --allgit add --all

--- a/style.css
+++ b/style.css
@@ -280,3 +280,17 @@ iframe {
 
 /* ------------------------------------ undersider slut -----------------------------------------------*/
 /* ------------------------------------ footer -----------------------------------------------*/
+
+.gridcon_icons {
+  display: grid;
+  grid-template-columns: auto auto auto;
+}
+
+.footer_icons {
+  width: 4vw;
+}
+
+footer {
+  background-color: #5ba5a4;
+}
+/* ------------------------------------ footer slut -----------------------------------------------*/
