--- a/style.css
+++ b/style.css
@@ -268,6 +268,14 @@ iframe {
   margin-right: 10vw;
   padding: 5vw;
 }
+#kontakt p {
+  margin-left: 10vw;
+  margin-right: 10vw;
+}
+#kontakt h1 {
+  margin-left: 10vw;
+  margin-right: 10vw;
+}
 
 #kontakt .splash p {
   position: absolute;
