--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ h3 {
   padding: 5vw;
 }
 
-#forside #gridcon {
+#forside .gridcon {
   display: grid;
   grid-template-columns: auto auto auto auto;
   margin-left: 10vw;
@@ -464,4 +464,53 @@ a {
   */
 #menuToggle input:checked ~ ul {
   transform: none;
+}
+
+/* --------------------------------------- forside media ----------------------------------------- */
+
+@media only screen and (max-width: 450px) {
+  .splash p {
+    position: absolute;
+    margin-left: 15vw;
+    margin-top: -150vw;
+    color: #f9f9f9;
+    font-family: "Montserrat", sans-serif;
+    font-size: 6vw;
+    z-index: 1;
+  }
+}
+@media only screen and (max-width: 450px) {
+  #forside section {
+    width: 100vw;
+  }
+}
+
+@media only screen and (max-width: 450px) {
+  #forside .gridcon {
+    display: flex;
+    flex-wrap: nowrap;
+    margin-left: 5vw;
+    margin-right: 5vw;
+    padding: 5vw;
+  }
+}
+
+@media only screen and (max-width: 450px) {
+  .griditem {
+    flex-basis: 0;
+  }
+}
+#forside #gridcon2 {
+  display: grid;
+  grid-template-columns: auto auto;
+  margin-left: 10vw;
+  margin-right: 10vw;
+}
+
+iframe {
+  margin-left: 10vw;
+  margin-right: 10vw;
+  padding: 5vw;
+  width: 55vw;
+  height: 52.5vh;
 }
