Rettelser til kontakt

--- a/kontakt.css
+++ b/kontakt.css
@@ -1,36 +1,84 @@
 /* ------------------------------------ kontakt ----------------------------------------*/
 
 #kontakt .gridcon {
-  display: grid;
-  grid-template-columns: auto auto auto;
-  margin-left: 10vw;
-  margin-right: 10vw;
-  padding: 5vw;
+    display: grid;
+    grid-template-columns: auto auto auto;
+    margin-left: 10vw;
+    margin-right: 10vw;
+    padding: 2vw;
+    display: flex;
 }
+
+.griditem {
+    margin: 20px;
+}
+
+.griditem img {
+    text-align: center;
+    padding: 20px;
+}
+
 #kontakt p {
-  margin-left: 10vw;
-  margin-right: 10vw;
+    line-height: 1.5;
 }
+
 #kontakt h1 {
-  margin-left: 10vw;
-  margin-right: 10vw;
+    margin-left: 10vw;
+    margin-right: 10vw;
 }
 
 #kontakt .splash p {
-  position: absolute;
-  margin-left: 15vw;
-  margin-top: -25vw;
-  color: #f9f9f9;
-  font-family: "Montserrat", sans-serif;
-  font-size: 2vw;
-  z-index: 1;
+    position: absolute;
+    margin-left: 15vw;
+    margin-top: -25vw;
+    color: #f9f9f9;
+    font-family: "Montserrat", sans-serif;
+    font-size: 2vw;
+    z-index: 1;
 }
 
+
+#addresse {
+    background-color: #b7e5e5;
+    color: #f9f9f9;
+    padding: 10vw;
+    text-align: center;
+}
+
+#team {
+    margin-top: 5vw;
+    text-align: center;
+}
+
+/* --- kontaktformel ***/
+
 #kontakt form {
-  display: grid;
-  grid-template-columns: auto;
-  margin-left: 15vw;
-  margin-right: 15vw;
+    display: grid;
+    grid-template-columns: auto;
+    margin: 5vw 15vw 10vw 15vw;
+    font-family: "Amiko", sans-serif;
+
+}
+
+input[type=text],
+select[id=country],
+textarea[id=subject] {
+    border: 2px solid #5ba5a4;
+    border-radius: 4px;
+    padding: 1vw;
+}
+
+label,
+input {
+    margin: 1vw 0 1vw 0;
+}
+
+input[type=submit] {
+    border: 3px solid #5ba5a4;
+    color: #f9f9f9;
+    padding: 1vw;
+    border-radius: 4px;
+    background-color: #5ba5a4;
 }
 
 /* ------------------------------------ kontakt slut ----------------------------------------*/
