--- a/aktiv.css
+++ b/aktiv.css
@@ -1,27 +1,6 @@
 /* ------------------------------- aktiviteter ----------------------------------*/
 
-#aktiv #gridcon {
-  display: grid;
-  grid-template-columns: auto auto;
-  margin-left: 10vw;
-  margin-right: 10vw;
-  padding: 5vw;
-}
-#aktiv #gridcon1 {
-  display: grid;
-  grid-template-columns: auto auto;
-  margin-left: 10vw;
-  margin-right: 10vw;
-  padding: 5vw;
-}
-#aktiv #gridcon2 {
-  display: grid;
-  grid-template-columns: auto auto;
-  margin-left: 10vw;
-  margin-right: 10vw;
-  padding: 5vw;
-}
-#aktiv #gridcon3 {
+#aktiv .gridcon {
   display: grid;
   grid-template-columns: auto auto;
   margin-left: 10vw;
@@ -46,4 +25,11 @@
 #aktiv #baggrund {
   background-image: url("background/Background_Aktiviteter.png");
   background-size: cover;
+  position: relative;
+
+  margin-top: -2vw;
+}
+/* ------------------------------ aktivterer media ---------------------------------------*/
+
+@media only screen and (max-width: 600px) {
 }
