--- a/aktiv.css
+++ b/aktiv.css
@@ -26,10 +26,21 @@
   background-image: url("background/Background_Aktiviteter.png");
   background-size: cover;
   position: relative;
-
   margin-top: -2vw;
 }
 /* ------------------------------ aktivterer media ---------------------------------------*/
 
 @media only screen and (max-width: 600px) {
+  #aktiv .gridcon {
+    display: grid;
+    grid-template-columns: auto auto;
+    margin-left: 10vw;
+    margin-right: 10vw;
+    padding: 5vw;
+  }
+
+  #aktiv .griditem img {
+    width: 30vw;
+    padding: 1vw;
+  }
 }
