--- a/forside.css
+++ b/forside.css
@@ -19,22 +19,23 @@
 }
 
 #forside .gridcon {
-    display: grid;
-    grid-template-columns: auto auto auto auto;
+    display: flex;
+    flex-wrap: nowrap;
     margin-left: 5vw;
     margin-right: 5vw;
     padding: 2vw;
 }
 
 .gridcon .griditem {
+    width: 25%;
     margin: 1vw;
     text-align: center;
 }
 
 #forside .gridcon2 {
     color: #282828;
-    display: grid;
-    grid-template-columns: auto auto;
+    display: flex;
+    flex-wrap: nowrap;
     margin-left: 5vw;
     margin-right: 5vw;
 }
@@ -45,18 +46,11 @@
 }
 
 .gridcon2 img {
-    width: 20%;
+    width: 100%;
     height: auto;
-    border-bottom: 15px solid #f9f9f9;
 }
 
-iframe {
-    margin-left: 10vw;
-    margin-right: 10vw;
-    padding: 5vw;
-    width: 55vw;
-    height: 52.5vh;
-}
+
 
 #forside .icons .griditem img {
     width: 10vw;
@@ -65,6 +59,34 @@ iframe {
 
 #forside .griditem img {
     width: 35vw;
+}
+
+#video {
+    text-align: center;
+    background-color: #f9f9f9;
+    margin: 5vw 0 0 0;
+
+}
+
+#video h1 {
+    color: #76d2d1;
+}
+
+iframe {
+    margin: 1vw 10vw 0 10vw;
+    width: 55vw;
+    height: 52.5vh;
+}
+
+#kontakt_info {
+    text-align: center;
+    background-color: #9ee89c;
+    padding: 5vw 0 0 0;
+    color: #f9f9f9;
+}
+
+.kontakt_button {
+    padding: 3vw;
 }
 
 /*---------------------- FORSIDE SLUT ------------------------------------*/
@@ -76,16 +98,15 @@ iframe {
         width: 100vw;
     }
     #forside .one {
-        background-image: url("background/Background_Index_om.png");
+        background-image: url("background/Background_Idea.png");
         padding: 0;
         margin: 0;
     }
 
     #forside .gridcon {
-        display: grid;
-        grid-template-columns: 100vw;
-        grid-template-rows: auto auto auto auto;
-        background-color: palevioletred;
+        display: flex;
+        flex-wrap: wrap;
+        background-color: #f9f9f9;
         margin-left: 0;
         margin-right: 0;
     }
@@ -102,19 +123,29 @@ iframe {
     }
 
     #forside .gridcon .griditem img {
-        margin-left: 35vw;
+        width: 40vw;
+        height: auto;
+    }
+
+    #forside .gridcon2 .griditem img {
+        width: 100vw;
+        position: relative;
+        margin: -5vw;
+        padding: 0;
     }
 
     #forside .gridcon2 {
-        display: grid;
-        grid-template-columns: 100vw;
-        grid-template-rows: auto auto;
-        justify-content: center;
+        display: flex;
+        flex-wrap: wrap;
+        margin: 0;
+        flex-direction: column-reverse;
     }
 
-    #forside .griditem img {
-        width: 100vw;
+
+    .gridcon2 p {
+        margin: 3vw;
     }
+
 
     iframe {
         margin-left: 5vw;
