--- a/aktiv.css
+++ b/aktiv.css
@@ -1,58 +1,101 @@
 /* ------------------------------- aktiviteter ----------------------------------*/
 
 #aktiv .gridcon {
-  display: grid;
-  grid-template-columns: auto auto;
-  margin-left: 10vw;
-  margin-right: 10vw;
-  padding: 5vw;
+    display: flex;
+    margin-left: 5vw;
+    margin-right: 5vw;
+    padding: 5vw;
+}
+
+#aktiv .griditem {
+    width: 35vw;
+    height: auto;
+    padding: 2vw;
 }
 
 #aktiv .griditem img {
-  width: 30vw;
-  padding: 1vw;
+    width: 35vw;
+    padding: 1vw;
 }
 
 #aktiv .griditem p {
-  font-family: "Amiko", sans-serif;
-  padding: 1vw;
+    font-family: "Amiko", sans-serif;
+    padding: 1vw;
+    line-height: 1.7;
+    font-size: 0.9em;
+}
+
+#aktiv .griditem h2 {
+    padding: 1vw;
 }
 
 #aktiv .griditem button {
-  margin: 1vw;
-  color: #f9f9f9;
-  border: solid #f9f9f9 3px;
+    margin: 1vw;
+    color: #f9f9f9;
+    border: solid #f9f9f9 3px;
 }
 
 #aktiv #baggrund {
-  background-image: url("background/Background_Aktiviteter.png");
-  background-size: cover;
-  position: relative;
-  margin-top: -2vw;
+    display: flex;
+    flex-wrap: wrap;
+    height: 100%;
+    background-image: url("background/Background_Aktiviteter.png");
+    background-size: cover;
+    position: relative;
+    margin-top: -2vw;
 }
+
+#baggrund section {
+    flex-grow: 1;
+}
+
+
 /* ------------------------------ aktivterer media ---------------------------------------*/
 
 @media only screen and (max-width: 600px) {
-  #aktiv .gridcon {
-    display: grid;
-    grid-template-columns: 100vw;
-    grid-template-rows: auto auto;
+    #baggrund {
+        margin: 0;
+    }
 
-    margin-left: 0vw;
-    margin-right: 0vw;
-    padding: 0;
-  }
+    #aktiv .gridcon {
+        display: flex;
+        justify-content: center;
+        width: 100%;
+        margin: 0;
+        padding: 0;
+    }
 
-  #aktiv .griditem img {
-    width: 100vw;
-    padding: 0;
-  }
+    .fritidsklub .gridcon,
+    .sommercamps .gridcon {
+        flex-wrap: wrap-reverse;
+    }
 
-  #aktiv .griditem h2 {
-    text-align: center;
-  }
+    .international .gridcon,
+    .undervisning .gridcon {
+        flex-wrap: wrap;
+    }
+    #aktiv .gridcon p {
+        margin: 2% 10% 10% 10%;
+        width: 80%;
+        text-align: center
+    }
+    #aktiv .griditem {
+        flex-basis: 100%;
+        padding: 0;
+        margin: 0;
+    }
 
-  #aktiv .griditem button {
-    margin-left: 40vw;
-  }
+    #aktiv .griditem img {
+        width: 100vw;
+        padding: 0;
+        margin: 0;
+    }
+
+    #aktiv .griditem h2 {
+        text-align: center;
+    }
+
+
+
+
 }
