--- a/style.css
+++ b/style.css
@@ -20,6 +20,8 @@ button {
 
 p {
     font-family: "Amiko", sans-serif;
+    line-height: 1.7;
+    font-size: 0.9em;
 }
 
 h1 {
@@ -37,6 +39,7 @@ h2 {
 h3 {
     font-family: "Amiko", sans-serif;
     line-height: 1.5;
+    text-align: center;
 }
 
 .splash {
@@ -140,11 +143,13 @@ h3 {
 
 /* ------------------------------------ undersider -----------------------------------------------*/
 
+/***camp****/
+
 .gridcon {
     display: grid;
     grid-template-columns: auto auto auto;
-    margin-left: 10vw;
-    margin-right: 10vw;
+    margin-left: 5vw;
+    margin-right: 5vw;
     padding: 5vw;
 }
 
@@ -152,8 +157,29 @@ h3 {
     width: 25vw;
 }
 
-.prisliste ul li {
+ul,
+li {
     list-style: none;
+    line-height: 3;
+    font-family: "Amiko", sans-serif;
+    font-size: 0.9em;
+}
+
+#camp .prisliste .griditem {
+    padding: 2vw;
+    background-color: #76d2d1;
+    border-radius: 10px;
+    margin: 2vw;
+}
+
+#camp .gridcon {
+    padding: 0;
+}
+
+#camp .title {
+    width: 100vw;
+    padding: 0;
+    margin: 0;
 }
 
 /* -------------------------------- undersider media ------------------------------------------------*/
