--- a/style.css
+++ b/style.css
@@ -46,6 +46,12 @@ h3 {
     margin-left: 0;
 }
 
+.splash img {
+    margin-left: 0;
+    width: 100%;
+    height: auto;
+}
+
 .splash p {
     position: absolute;
     margin-left: 15vw;
@@ -56,6 +62,7 @@ h3 {
     font-size: 3vw;
 }
 
+
 @media only screen and (max-width: 600px) {
     .splash p {
         position: absolute;
@@ -64,6 +71,11 @@ h3 {
         color: #f9f9f9;
         font-family: "Montserrat", sans-serif;
         font-size: 6vw;
+    }
+
+    .splash img {
+        height: 600px;
+        width: auto;
     }
 }
 
@@ -180,6 +192,7 @@ li {
     width: 100vw;
     padding: 0;
     margin: 0;
+    text-align: center;
 }
 
 /* -------------------------------- undersider media ------------------------------------------------*/
